tests/build/cases/widget_new/invalid_special.stderr
error: unknown special value,  expected `unset!`
 --> cases/widget_new/invalid_special.rs:6:28
  |
6 |         background_color = invalid!;
  |                            ^^^^^^^
