tests/build/cases/widget_new/invalid_special.rs
use zero_ui::prelude::*;

fn main() {
    let _app = App::minimal();
    let _w = Button! {
        background_color = invalid!;
    };
}
